Fixed issue with the scene tree component rendering with max-height and overflow-y
There was an issue where large scene trees end up with overlapping nodes becuse the max-height needed to enable a smooth animation was too low.  So scene nodes in the component ended up rendering nodes on top of each other on large scene node tree (more than 5 children nodes.  And when the scene tree was long enough, the scene tree would then overlap with the scene node detail panels. Both css tweaks fix those two issue. The max-height removal effectively prevents any animation when collapsingnodes in the scene tree, but that's fine for now. Better to have a fully functional tree than a fancy one that does not always work.

--- a/editor/index.css
+++ b/editor/index.css
@@ -126,6 +126,7 @@ body {
 
 .scene-tree {
   height: 100%;
+  overflow-y: auto;
 }
 
 .scene-tree-header {
@@ -146,7 +147,7 @@ body {
   padding: 0px !important;
 
   /* This is for animating collapsing of the tree */
-  max-height: 100px;
+  /* max-height: 100px; */
 }
 
 .scene-node.collapsed > .scene-nodes {
